<resources>
    <string name="clear_pad">Reset</string>
    <string name="save_signature">Save</string>
    <string name="enter_email_id_amp_password_to_access_your_account"><![CDATA[Enter Email ID & Password to access your account]]></string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="capital_login">Login</string>
    <string name="login_with_ad">Login with AD</string>
    <string name="sign_in">Sign In</string>
    <string name="home">Home</string>
    <string name="my_tasks">My Task</string>
    <string name="notifications">Notifications</string>
    <string name="my_profile">My profile</string>
    <string name="i_tower">I-Tower</string>
    <string name="assign_task">Assign Task</string>
    <string name="unassigned_task">Unassigned Task</string>
    <string name="scheduled_text">Scheduled text :</string>
    <string name="added_today">Added Today :</string>
    <string name="task_details">Task Details</string>
    <string name="close">Close</string>
    <string name="forecast_start_date">Forecast Start Date</string>
    <string name="forecast_end_date">Forecast End Date</string>
    <string name="task_status">Task Status</string>
    <string name="sla_status">SLA Status</string>
    <string name="customer_site_id">Customer Site ID</string>
    <string name="tawal_site_id">Tawal Site ID</string>
    <string name="plan_start_date">Plan Start Date</string>
    <string name="plan_end_date">Plan End Date</string>
    <string name="actual_start_date">Actual Start Date</string>
    <string name="actual_end_date">Actual End Date</string>
    <string name="requester">Requester</string>
    <string name="site_tower_type">Site Tower Type</string>
    <string name="request_type">Request Type</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="start_activity">Start Activity</string>
    <string name="un_assign">Un-assign</string>
    <string name="loading_your_content_this_may_take_a_few_seconds">Loading your content, this may take a few seconds…</string>
    <string name="task_in_progress">Task In Progress</string>
    <string name="due_by">Due by</string>
    <string name="basic_details">Basic Details</string>
    <string name="additional_documents">Additional Documents</string>
    <string name="request_details">Request Details</string>
    <string name="add_additional_document">Add Additional Document</string>
    <string name="document_information">Document Information</string>
    <string name="document_type">Document Type</string>
    <string name="document_name">Document Name</string>
    <string name="upload_date_amp_time"><![CDATA[Upload Date & Time]]></string>
    <string name="document_description">Document Description</string>
    <string name="text">Text</string>
    <string name="sadad_biller_code">SADAD Biller Code</string>
    <string name="add_attachments">Add Attachments</string>
    <string name="account_number">Account Number</string>
    <string name="sadad_document_expiry_date">SADAD Document Expiry Date</string>
    <string name="lease_rent_vat_expiry_date">Lease Rent VAT Expiry Date</string>
    <string name="sadad_document">SADAD Document</string>
    <string name="lease_rent_vat_document">Lease Rent VAT Document</string>
    <string name="landlord_name_arabic">Landlord Name (Arabic)</string>
    <string name="landlord_name">Landlord Name</string>
    <string name="landlord_id">Landlord ID</string>
    <string name="landlord_type">Landlord Type</string>
    <string name="landlord_district_arabic">Landlord District (Arabic)</string>
    <string name="landlord_city_arabic">Landlord City (Arabic)</string>
    <string name="landlord_city">Landlord City</string>
    <string name="landlord_district">Landlord District</string>
    <string name="landlord_national_id_number">Landlord National ID Number</string>
    <string name="landlord_telephone">Landlord Telephone</string>
    <string name="landlord_email">Landlord Email</string>
    <string name="commercial_registration_number">Commercial Registration Number</string>
    <string name="is_vat_applicable">Is VAT Applicable?</string>
    <string name="filters">Filters</string>
    <string name="clear_all">Clear all</string>
    <string name="task">Task</string>
    <string name="priority">Priority</string>
    <string name="all_task">All Task</string>
    <string name="assigned_task">Assigned Task</string>
    <string name="scheduled">Scheduled :</string>
    <string name="delayed">Delayed</string>
    <string name="on_time">On Time</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="apply">Apply</string>
    <string name="enter_alphanumeric">Enter alphanumeric</string>
    <string name="dd_mm_yyyy">dd.mm.yyyy</string>
    <string name="off_duty">OFF DUTY</string>
    <string name="on_duty">ON DUTY</string>
    <string name="actions">Actions</string>
    <string name="field_work">Field Work</string>
    <string name="na">NA</string>
    <string name="resume">Resume</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="update_date">Update Date</string>
    <string name="submit_baladiya_request">Submit Baladiya Request</string>
    <string name="baladiya_name">Baladiya Name</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="asterisk_symbol">*</string>
    <string name="step_1_submit_baladiya_request">Step 1 : Submit Baladiya Request</string>
    <string name="step_2_baladiya_permit_checklist">Step 2 : Baladiya Permit Checklist</string>
    <string name="remarks">Remarks</string>
    <string name="baladiya_application_submitted">Baladiya Application Submitted?</string>
    <string name="baladiya_request_number">Baladiya Request Number</string>
    <string name="tracking_number">Tracking Number</string>
    <string name="save_as_draft">Save as Draft</string>
    <string name="baladiya_permit_checklist">Baladiya Permit Checklist</string>
    <string name="is_the_follow_up_with_baladiya_completed">Is the follow-up with Baladiya completed?</string>
    <string name="is_the_baladiyah_permit_acquired">Is the Baladiyah Permit acquired?</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_text">Enter Text</string>
    <string name="enter_decimal_value">Enter Decimal Value</string>
    <string name="payment_period_in_days">Payment Period (in days)</string>
    <string name="size">size</string>
    <string name="empty_string" />
    <string name="no_document_selected">No Document Selected</string>
    <string-array name="yes_no_drop_down">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="approved_rejected_dropdown">
        <item>Approved</item>
        <item>Rejected</item>
    </string-array>
    <string name="alpha_numeric_values">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz 0123456789</string>
    <string name="upload_baladiya_permit">Upload Baladiya Permit</string>
    <string name="baladiya_certificate">Baladiya Certificate</string>
    <string name="capture_candidate_details">Capture Candidate Details</string>
    <string name="captured_candidate_details">Captured Candidate Details</string>
    <string name="add_new_candidate">Add new Candidate</string>
    <string name="select_existing_candidate">Select Existing Candidate</string>
    <string name="site_district">Site District</string>
    <string name="site_city">Site City</string>
    <string name="site_district_arabic">Site District (Arabic)</string>
    <string name="site_city_arabic">Site City (Arabic)</string>
    <string name="geo_type_location_type_cluster">Geo type/ Location Type/ Cluster</string>
    <string name="longitude_of_nominal_point">Longitude of Nominal Point</string>
    <string name="latitude_of_nominal_point">Latitude of Nominal point</string>
    <string name="search_ring_radius_in_meter">Search ring radius (in Meter)*</string>
    <string name="project_name">Project Name</string>
    <string name="bss_request_no">BSS Request No.</string>
    <string name="requesting_customer">Requesting Customer</string>
    <string name="iproject_request_id">iProject Request ID</string>
    <string name="is_it_a_vip_request">Is it a VIP Request?</string>
    <string name="customer_commercial_agreement_no_or_reference">Customer Commercial Agreement No or Reference</string>
    <string name="expected_number_of_colocation_on_site">Expected No. of Colocation</string>
    <string name="dp_proposed_tower_height_for_gf_in_mtr">DP Proposed Tower Height for GF (Meters)</string>
    <string name="potential_customer">Potential Customer</string>
    <string name="expected_packages">Expected Package</string>
    <string name="forecast_date_for_colocation">Forecast Date for Colocation</string>
    <string name="version">Version</string>
    <string name="capture_new_candidate">Capture New Candidate</string>
    <string name="_1_property_details">1. Property Details</string>
    <string name="_2_landlord_details">2. Landlord Details</string>
    <string name="_3_delegate_details">3. Delegate Details</string>
    <string name="_4_account_details">4. Account Details</string>
    <string name="_5_upload_documents">5. Upload Documents</string>
    <string name="bahah">Bahah</string>
    <string name="candidates_selected">Candidates Selected</string>
    <string name="property_id">Property ID</string>
    <string name="property_district">Property District</string>
    <string name="property_city">Property City</string>
    <string name="enter_property_id_and_landlord_name">Enter Property ID and Landlord Name</string>
    <string name="_0">0</string>
    <string name="select_all">Select all</string>
    <string name="are_you_sure_you_want_to_delete_this_candidate">Are you sure you want to delete this Candidate ?</string>
    <string name="this_candidate_will_be_deleted_permanently">This candidate will be deleted permanently.</string>
    <string name="fill_mandatory_details">Fill mandatory Details</string>
    <string name="no_candidate_added">No Candidate Added</string>
    <string name="rejection_remarks">Rejection Remarks</string>
    <string name="property_details">Property Details</string>
    <string name="essential_property">Essential Property</string>
    <string name="landlord_price_quoted">Landlord Price (Quoted)</string>
    <string name="site_address">Site Address</string>
    <string name="site_street">Site Street</string>
    <string name="site_street_arabic">Site Street (Arabic)</string>
    <string name="distance_from_road_in_meter">Distance From Road (in Meter)</string>
    <string name="site_neighbourhood">Site Neighbourhood</string>
    <string name="site_neighbourhood_arabic">Site Neighbourhood (Arabic)</string>
    <string name="area_type">Area Type</string>
    <string name="leased_space_type">Leased Space Type</string>
    <string name="site_type">Site Type</string>
    <string name="kindly_upload_proof_of_height_in_case_of_rooftop">*Kindly Upload Proof of height in case of Rooftop.</string>
    <string name="approx_building_height_without_parapet">Approx. Building Height Without Parapet</string>
    <string name="penthouse_available">Penthouse Available</string>
    <string name="candidate_complied_with_momra_regulations">Candidate Complied with MOMRA Regulations</string>
    <string name="access_road_required">Access Road Required</string>
    <string name="power_source_type">Power Source Type</string>
    <string name="owner_approval_to_install_sub_station">Owner approval to install sub station</string>
    <string name="power_source_distance_from_substation_sceco">Power Source Distance from Substation(SCECO)</string>
</resources>