<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/LightTheme">


        <RelativeLayout
            android:id="@+id/rlClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/light_white_top_rounded_rect_bg"
            android:paddingBottom="@dimen/_8sdp"
            app:layout_constraintTop_toTopOf="parent">

            <com.isl.leaseManagement.utils.CustomTextView
                android:id="@+id/closeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/close"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />


            <com.isl.leaseManagement.utils.CustomTextView
                android:id="@+id/nameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/actions"
                android:textAlignment="center"
                android:textColor="@color/color_001E60"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent" />
        </RelativeLayout>


        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/light_sky_blue"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rlClose">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="wrap_content">

                <com.isl.leaseManagement.utils.CustomTextView
                    android:id="@+id/requestDetailsTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_32sdp"
                    android:drawableStart="@drawable/request_details_icon"
                    android:drawablePadding="@dimen/_8sdp"
                    android:paddingVertical="@dimen/_14sdp"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:text="@string/request_details"
                    android:textColor="@color/color_253746"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.isl.leaseManagement.utils.CustomTextView
                    android:id="@+id/addAdditionalDocTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:drawableStart="@drawable/add_additional_doc"
                    android:drawablePadding="@dimen/_8sdp"
                    android:paddingVertical="@dimen/_14sdp"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:text="@string/add_additional_document"
                    android:textColor="@color/color_253746"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/requestDetailsTv" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
